import Foundation

enum UIConstantsEN {
    static let tabItemCurrent = "Current"
    static let tabItemForecast = "Forecast"
    static let currentConditionsFeelsLike = "Feels Like"
    static let currentConditionsDateFormat = "EE"
    static let loadingView = "Loading"
    static let navBarTitle: [String] = ["Local Temperature", "Forecast", "Search"]
}
